{
    "name": "InteractMenuActions",
    "maps": [
        {
            "name": "MainActions",
            "id": "99a20abe-8376-41ae-8f63-ad596d29055b",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "7352f8b6-69cc-4fd2-a61c-d28a6d50e7ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "bcee6647-5fad-4435-95de-5246f29bb1eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "73303730-060f-4488-b191-9694d476cd96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00466599-2760-44a6-854e-b03dab5224c5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3603e6d-2d4e-4e82-8114-7d02292a3965",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41885f30-e627-45f4-bada-6ac724340c23",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}